--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,15 @@ dependencies:
   sign_in_with_apple: ^6.1.3
   crypto: ^3.0.6
 
+  # Ads
+  google_mobile_ads: ^5.1.0
+
   # HTTP & API
   http: ^1.2.0
+
+  # Location
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
 
   # Persistence
   shared_preferences: ^2.2.2
@@ -54,12 +61,48 @@ dependencies:
   # SVG Support
   flutter_svg: ^2.0.10
 
+  # Sharing
+  share_plus: ^12.0.1
+
+  # Google Fonts
+  google_fonts: ^6.2.1
+  flutter_local_notifications: ^20.1.0
+  timezone: ^0.10.1
+  just_audio: ^0.9.42
+  google_maps_flutter: ^2.10.0
+  url_launcher: ^6.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/icon/app_icon.png"
+    background_color: "#hex_code"
+    theme_color: "#hex_code"
+  windows:
+    generate: true
+    image_path: "assets/icon/app_icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/app_icon.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/icon/app_icon.png"
+  android_12:
+    image: "assets/icon/app_icon.png"
+    color: "#ffffff"
 
 flutter:
   uses-material-design: true
@@ -68,3 +111,4 @@ flutter:
     - assets/data/duas.json
     - assets/data/morning_adhkar.json
     - assets/data/evening_adhkar.json
+    - assets/icon/
