--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <application
-        android:label="ramadan_habit_tracker"
+        android:label="Noor Planner"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <meta-data
